--- a/src/CSS/style_htmlycss.css
+++ b/src/CSS/style_htmlycss.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Renogare;
-  src: url(Renogare-Regular.otf);
+  src: url(../../Renogare-Regular.otf);
   font-weight: normal;
 }
 
@@ -12,8 +12,8 @@
 
 .banner{
   width: 100%;
-  height: 150vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
+  height: 220vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../../Imgs/Other/backgroundimg.png);
   background-size: cover;
   background-position: center;
 }
@@ -77,15 +77,15 @@
 }
 
 .content p{
-width: 90%;
-top: 0px;
-left: 80px;
-line-height: 27px;
-position: relative;
-font-size: 20px;
-margin:5px;
-text-align: center;
-animation: fade 1.5s;
+  width: 90%;
+  top: 0px;
+  left: 80px;
+  line-height: 27px;
+  position: relative;
+  font-size: 20px;
+  margin:5px;
+  text-align: center;
+  animation: fade 1.5s;
 }
 
 .content p a{
@@ -98,12 +98,7 @@ font-size: 25px;
 
 }
 
-.content p m{
-  color: #db6a00; 
-
-}
-
-.rust1-pic{
+.html-pic{
   width: 18%;
   position: absolute;
   top: 250px;
@@ -111,13 +106,21 @@ font-size: 25px;
   animation: fade-pics-left 2s;
 }
 
-.rust2-pic{
+.css-pic{
   width: 16%;
   position: absolute;
-  top: 600px;
-  left: 1200px;
+  top: 37%;
+  left: 75%;
   animation: fade-pics-right 2s; 
     
+}
+
+.htmlcode-pic{
+  width: 25%;
+  position: absolute;
+  top: 1000px;
+  left: 2%;
+  animation: fade-pics-left 2s;
 }
 
 @keyframes fade{
@@ -188,16 +191,23 @@ font-size: 25px;
 
   }
 
-  .rust1-pic{
-    left: 130px;
-    top: 107%;
-    width: 30%;
+  .html-pic{
+    left: 100px;
+    top: 104%;
+    width: 22%;
   }
 
-  .rust2-pic{
-    top: 107%;
-    width: 30%;
-    left: 550px;
+  .css-pic{
+    top: 104%;
+    width: 21%;
+    left: 670px;
+
+  }
+
+  .htmlcode-pic{
+    width: 25%;
+    top: 105%;
+    left: 375px;
 
   }
 
