--- a/src/CSS/style_index.css
+++ b/src/CSS/style_index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Renogare;
-  src: url(Renogare-Regular.otf);
+  src: url(../../Renogare-Regular.otf);
   font-weight: normal;
 }
 
@@ -13,7 +13,7 @@
 .banner{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../../Imgs/Other/backgroundimg.png);
   background-size: cover;
   background-position: center;
 }
@@ -64,17 +64,20 @@
  color: #fff;
  position: absolute;
  width: 100%;
- top: 51%; 
+ top: 50%; 
  transform: translateY(-50%);
  text-align: center;
 }
 
 .content p{
-margin: 5px auto; 
-font-size: 25px;
-font-weight: 70;
-line-height: 50px; 
+  margin: 5px; 
+  font-size: 25px;
+  font-weight: 70;
+  line-height: 50px; 
 }
+/*
+Este código lo he encontrado y parece no hacer nada, sería para testear.
+Lo he comentado por si resulta ser importante.
 
 button{
   width: 200px; 
@@ -115,6 +118,7 @@ button:hover span{
 button:hover{
   border: none; 
 }
+*/
 
 .content h1{
   font-size: 50px;
