--- a/src/CSS/style_miweb.css
+++ b/src/CSS/style_miweb.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Renogare;
-  src: url(Renogare-Regular.otf);
+  src: url(../../Renogare-Regular.otf);
   font-weight: normal;
 }
 
@@ -12,8 +12,8 @@
 
 .banner{
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
+  height: 340vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../../Imgs/Other/backgroundimg.png);
   background-size: cover;
   background-position: center;
 }
@@ -65,9 +65,10 @@
 .content{
   position: absolute;
   width: 100%;
-  top: 20%; 
+  top: 172%; 
   transform: translateY(-50%);
   text-align: center;
+  justify-content: baseline;
 }
 
 .content h2{
@@ -77,22 +78,8 @@
   font-weight: 100;
 }
 
-.swiper{
-  position: absolute;
-  width: 80%;
-  height: 65%;
-  top: -70%;
-}
-
-.swiper-slide{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
 #slider {
-  position: absolute;
+  position: relative;
   top: 30%;
   left: 18%;
   width: 60%;
@@ -105,13 +92,31 @@
 #slider figure {
 	position: relative;
 	width: 500%;
-	margin: 0;
+	margin-top: 50px;
 	left: 0;
 	animation: 20s slider infinite;
 }
+
 #slider figure img {
 	float: left;
 	width: 20%;
+}
+
+.text p{
+  position: relative;
+  margin-top: 100px;
+  color: white; 
+
+}
+
+.text p a{
+  color:#009688;
+  font-size: 25px;
+}
+
+.text p b{
+  color:#009688;
+  font-size: 35px;
 }
 
 @keyframes slider {
